--- a/src/content/graphos/delivery/schema-checks.mdx
+++ b/src/content/graphos/delivery/schema-checks.mdx
@@ -114,7 +114,7 @@ proposed schema changes break any downstream [contract](./contracts) variants.
 </tbody>
 </table>
 
-This article provides further details on build and operations.
+This article provides further details on build and operations checks.
 
 - For details on linter checks, see [Schema linting](./schema-linter/).
 - For details on custom checks, see [Custom checks](./custom-checks).
