--- a/src/content/graphos/cloud-routing/dedicated/custom-domains.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/custom-domains.mdx
@@ -28,7 +28,7 @@ Setup includes two steps:
 
 <Note>
 
-Custom domains will be available through self-service in GraphOS Studio later in 2024. In the meantime, you must open a support request to enable your CNAME with Apollo.
+Custom domains will be available through self-service in a future release. In the meantime, you must open a support request to enable your CNAME with Apollo.
 
 </Note>
 
