--- a/src/content/basics/devtools/editor-plugins.mdx
+++ b/src/content/basics/devtools/editor-plugins.mdx
@@ -299,7 +299,7 @@ in the `vscode-graphql` repository.
 
 You can add these configurations to your [Apollo config file](#setting-up-an-apollo-config).
 
-### `client.tagName
+### `client.tagName`
 
 _Optional_ - custom tagged template literal.
 
