--- a/src/content/basics/devtools/editor-plugins.mdx
+++ b/src/content/basics/devtools/editor-plugins.mdx
@@ -160,7 +160,11 @@ To link to a local schema file, add the following to the `apollo.config.json` fi
 
 </details>
 
-### <span id="client-only-schemas">Bonus: Adding client-only schemas</span>
+<div id="client-only-schemas">
+
+### Bonus: Adding client-only schemas
+
+</div>
 
 <details>
 <summary>
@@ -273,7 +277,12 @@ Navigating large codebases can be difficult, but the Apollo GraphQL extension ma
   style="margin: 5%"
   alt="Using jump to definition on a fragment"
 />
-### <span id="graph-variant-switching">Schema tag switching</span>
+
+<div id="graph-variant-switching">
+
+### Schema tag switching
+
+</div>
 
 Apollo supports publishing multiple versions ([variants](https://www.apollographql.com/docs/graphos/graphs/#variants)) of a schema. This is useful for developing on a future development schema and preparing your clients to conform to that schema. To switch between graph variants, open the Command Palette (`cmd + shift + p` on mac), search "Apollo" and choose the "Apollo: Select Schema Tag" option.
 
