Update subtitle and metadescription

--- a/src/content/graphos/org/sso/overview.mdx
+++ b/src/content/graphos/org/sso/overview.mdx
@@ -1,7 +1,7 @@
 ---
 title: GraphOS Single Sign-On
-subtitle: Placeholder
-description: Placeholder
+subtitle: Simplify access management with SAML and OIDC-based Single Sign-On for Apollo GraphOS
+description: Learn how to set up Single Sign-On (SSO) for Apollo GraphOS using SAML or OIDC. Explore both self-service and assisted setup options for secure, centralized access management.
 ---
 
 <PremiumFeature>
