--- a/src/content/graphos/delivery/schema-proposals/creation.mdx
+++ b/src/content/graphos/delivery/schema-proposals/creation.mdx
@@ -94,7 +94,7 @@ Next to the button, you can toggle on **Compose on change** so that composition 
 
 <Note>
 
-For very large, complex schemas, autocomposition may affect browser performance.
+For extremely large, complex schemas, composing on each change may affect browser performance.
 If you notice your browser lagging, consider keeping **Compose on change** off.
 
 </Note>
