--- a/src/content/graphos/delivery/custom-checks.mdx
+++ b/src/content/graphos/delivery/custom-checks.mdx
@@ -20,7 +20,7 @@ GraphOS Studio displays the issues you report along with other check result deta
 <img
   className="screenshot"
   src="../img/schema-checks/custom-check-results.jpg"
-  alt="chema check run showing custom check errors and warnings in GraphOS Studio"
+  alt="Schema check run showing custom check errors and warnings in GraphOS Studio"
   width="700"
 />
 
