--- a/src/content/graphos/metrics/operations.mdx
+++ b/src/content/graphos/metrics/operations.mdx
@@ -162,7 +162,7 @@ You can use the [`@defer`](../operations/defer/) directive to defer returning da
 When you click an operation name, you open detailed information for that operation in the main insights view. You can use the toggles below the operation name to view the operation's **usage**, **error** metrics, or [**traces**](#resolver-level-traces).
 
 <img
-  src="../img/operation-details.jpg"
+  src="../img/insights/operation-details.jpg"
   className="screenshot"
   alt="The Insights page in GraphOS Studio"
   width="600"
