Add custom schema checks (#930)
* Add custom check to overview

* Add raw custom check doc

* Vale

* Add relevant pointers

* Edit

* Vale

* Schema check edits (#931)

* Edits

* Copyedit

* Vale

* Add relevant pointers

* Fixes

* Copyedit

* Copyedit

* Copyedit

* Apply suggestions from code review

Co-authored-by: Samuel Collard <swcollard@users.noreply.github.com>

* Review suggestions and other edits

* Edit

* Remove image for now

* Update check configuration screenshot

* Copyedit

* Update HMAC example

* Add check run screenshot

* Add screenshot and copyedits

* Vale

---------

Co-authored-by: Samuel Collard <swcollard@users.noreply.github.com>

--- a/src/content/graphos/delivery/check-configurations.mdx
+++ b/src/content/graphos/delivery/check-configurations.mdx
@@ -49,6 +49,20 @@ See [Linter configuration](./schema-linter/#linter-configuration) for details.
 You can configure schema checks to include a Proposals task that verifies whether schema changes have matching and approved schema proposals.
 (Off by default.) [Learn more.](./schema-proposals/configuration#configure-schema-checks)
 
+#### Custom check configurations
+
+Enable custom checks and register your validation webhook. [Learn more.](./custom-checks)
+
+#### Linter check configurations
+
+Linter check configurations include whether to include linting checks (on by default) and linter rules' [severity levels](./schema-linter/#setting-severity-levels).
+See [Linter configuration](./schema-linter/#linter-configuration) for details.
+
+#### Proposals check configurations
+
+You can configure schema checks to include a Proposals task that verifies whether schema changes have matching and approved schema proposals.
+(Off by default.) [Learn more.](./schema-proposals/configuration#configure-schema-checks)
+
 ## Using the Rover CLI
 
 You can customize a single schema check run by providing options to the Rover CLI. If you've also [configured default rules](#using-graphos-studio-recommended) for schema checks, any command-line options you provide take precedence over those rules.
