--- a/src/content/graphos/delivery/run-checks.mdx
+++ b/src/content/graphos/delivery/run-checks.mdx
@@ -237,7 +237,8 @@ jobs:
 
 ## Next steps
 
-Once you've enabled schema checks, you can [configure them](./check-configurations) to suit your use case. Configurations include excluding certain historical operations from operations checks, ignoring certain types of schema changes, and more.
+Once you've enabled schema checks, you can [configure them](./check-configurations) to suit your use case.
+Configurations include excluding certain historical operations from operations checks, ignoring certain types of schema changes, enabling [custom checks](./custom-checks) and more.
 
 ### Integrating with GitHub
 
