--- a/src/content/graphos/delivery/checks-reference.mdx
+++ b/src/content/graphos/delivery/checks-reference.mdx
@@ -65,7 +65,7 @@ The operation is unaffected by schema change(s).
 </td>
 <td>
 
-A user has marked schema change(s) for this operation as [safe](#overriding-flagged-changes).
+A user has marked schema change(s) for this operation as [safe](./run-checks#overriding-flagged-changes).
 
 </td>
 </tr>
@@ -78,7 +78,7 @@ A user has marked schema change(s) for this operation as [safe](#overriding-flag
 </td>
 <td>
 
-A user has chosen to [ignore](#overriding-flagged-changes) schema change(s) for this operation.
+A user has chosen to [ignore](./run-checks#overriding-flagged-changes) schema change(s) for this operation.
 
 </td>
 </tr>
@@ -150,7 +150,7 @@ These changes update the default value for an argument or input type. If an oper
 
 <Note>
 
-You can use [ignored conditions settings](#ignored-conditions-settings) to ignore default value changes. Default value removals can still be breaking changes.
+You can use [ignored conditions settings](./run-checks#ignored-conditions-settings) to ignore default value changes. Default value removals can still be breaking changes.
 
 </Note>
 
