--- a/src/content/graphos/delivery/custom-checks.mdx
+++ b/src/content/graphos/delivery/custom-checks.mdx
@@ -25,7 +25,7 @@ GraphOS Studio displays the issues you report along with other check result deta
 />
 
 Custom checks run alongside other [check types](./schema-checks#types-of-checks) as part of every schema check run.
-Like operations, linter, and other check types, custom checks only run [after a build check has successfully completed](schema-checks#build-checks-1).
+Like operations, linter, and other check types, custom checks only run [after a build check has successfully completed](./schema-checks#build-checks-1).
 
 ## Prerequisites
 
